# productionAgentDemo

./: README.md
.github/workflows/: build_deploy_mage_api.yml  configure_agents.yml  create_indexes.yml  create_infra.yml  load_datas.yml
dataset/: lore.json
index/: indexes.json
infra/: main.bicep  main.bicepparam
infra/modules/: cosmosdb.bicep  foundry.bicep  model-deployment.bicep  webapp.bicep
notebooks/: create_index.py  indexing.ipynb  pyproject.toml  vector.json
src/apis/mage-guild/: package.json
src/apis/mage-guild/mage-guild/: Dockerfile  package-lock.json
src/apis/mage-guild/mage-guild/src/: main.ts
src/apis/mage-guild/mage-guild/src/data/: quest.json
src/apis/mage-guild/mage-guild/src/models/: quest.ts
src/apis/mage-guild/mage-guild/src/payload/: enrollment.ts
src/apis/mage-guild/src/: app.controller.ts  app.module.ts
src/apis/mage-guild/src/data/: quest.ts
src/apis/mage-guild/src/models/: quest.enrollement.ts
src/apis/mage-guild/src/quest/: quest.controller.ts  quest.module.ts  quest.repository.ts
utility/agentConfiguration/: main.py  pyproject.toml
utility/agentConfiguration/agents/MageGuild/: agent.py
utility/agentConfiguration/base/: __init__.py  agent_configuration.py
utility/database/: data.json  main.py  pyproject.toml
utility/indexer/: index.json  main.py  pyproject.toml
